--- a/app/static/sass/_icons.scss
+++ b/app/static/sass/_icons.scss
@@ -27,9 +27,11 @@
 }
 
 .icon.geolocate {
-    width: 20px;
-    height: 20px;
-    margin: 10px;
+    box-sizing: border-box;
+    padding: 3px;
+    width: 100%;
+    height: 100%;
+    filter:brightness(0); // TODO
 }
 
 .icon.geolocate.loading {
