--- a/app/templates/index.jinja2
+++ b/app/templates/index.jinja2
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class="sidebar">
+    <div class="sidebar rightbar">
         {% include 'leaflet/_sidebar_layers.jinja2' %}
         {% include 'leaflet/_sidebar_legend.jinja2' %}
         {% include 'leaflet/_sidebar_share.jinja2' %}
