--- a/app/static/sass/_icons.scss
+++ b/app/static/sass/_icons.scss
@@ -1,3 +1,11 @@
+// TODO remove this shit
+.icon {
+    filter:brightness(0);
+    box-sizing: border-box;
+    margin:0 !important;
+}
+
+
 // The sprite usage is deprecated.
 // New icons should be kept separate for ease of maintenance.
 // TODO: Split the sprite into separate files.
@@ -31,7 +39,6 @@
     padding: 3px;
     width: 100%;
     height: 100%;
-    filter:brightness(0); // TODO
 }
 
 .icon.geolocate.loading {
