--- a/app/templates/leaflet/_sidebar_layers.jinja2
+++ b/app/templates/leaflet/_sidebar_layers.jinja2
@@ -13,7 +13,7 @@
                 </div>
             </div>
 
-            <div class="layer" data-layer-id="standard">
+            <div class="layer" data-layer-id="standardLayer">
                 <label>
                     {{ t('javascripts.map.base.standard' )}}
                 </label>
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <div class="layer" data-layer-id="cyclemap">
+            <div class="layer" data-layer-id="cycleMap">
                 <label>
                     {{ t('javascripts.map.base.cycle_map' )}}
                 </label>
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <div class="layer" data-layer-id="transportmap">
+            <div class="layer" data-layer-id="transportMap">
                 <label>
                     {{ t('javascripts.map.base.transport_map' )}}
                 </label>
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="layer" data-layer-id="tracestracktopo">
+            <div class="layer" data-layer-id="tracestrackTopo">
                 <label>
                     {{ t('javascripts.map.base.tracestracktop_topo' )}}
                 </label>
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <div class="layer mb-2" data-layer-id="hot">
+            <div class="layer mb-2" data-layer-id="hotosm">
                 <label>
                     {{ t('javascripts.map.base.hot' )}}
                 </label>
